RESOLVED FIXED240149
[Cocoa] QueuedVideoOutput constructor missing nil check
https://bugs.webkit.org/show_bug.cgi?id=240149
Summary [Cocoa] QueuedVideoOutput constructor missing nil check
Youssef Soliman
Reported 2022-05-05 17:40:16 PDT
In the `QueuedVideoOutput` constructor, a nil check is missing for `m_videoOutput`, causing the GPU process to crash.
Attachments
Youssef Soliman
Comment 1 2022-05-05 17:44:47 PDT
Youssef Soliman
Comment 2 2022-05-05 17:49:29 PDT
Youssef Soliman
Comment 3 2022-05-05 17:56:33 PDT
EWS
Comment 4 2022-05-05 18:29:10 PDT
Committed r293877 (250335@main): <https://commits.webkit.org/250335@main> Reviewed commits have been landed. Closing PR #533 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.