[Cocoa] QueuedVideoOutput constructor missing nil check https://bugs.webkit.org/show_bug.cgi?id=240149

Reviewed by Eric Carlson.

Covered by existing tests.
* Source/WebCore/platform/graphics/avfoundation/objc/QueuedVideoOutput.h:
* Source/WebCore/platform/graphics/avfoundation/objc/QueuedVideoOutput.mm:
(WebCore::QueuedVideoOutput::create):
(WebCore::QueuedVideoOutput::QueuedVideoOutput):
(WebCore::QueuedVideoOutput::valid):

Canonical link: https://commits.webkit.org/250335@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293877 268f45cc-cd09-0410-ab3c-d52691b4dbfc